<resources>
    <string name="app_name">StockView</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="type_usuario_login">Usuário</string>
    <string name="type_senha_login">Senha</string>
    <string name="tituloBemVindoEntrar">Bem-vindo</string>
    <string name="textoDescricaoEntrar">Entre para gerenciar seus Stocks</string>
    <string name="textoEsqueciASenha">Esqueci minha senha</string>
    <string name="tituloEsqueciASenha">Recuperar conta</string>
    <string name="textoDescricaoEsqueciASenha">Insira o nome de usuário da conta que deseja recuperar. Enviaremos uma nova senha para o endereço de e-mail associado a esta conta.</string>
    <string name="hintEsqueciASenha">Nome de usuário</string>
    <string name="botaoEnviarEmailEsqueciASenha">Enviar</string>
    <string name="textoNaoPossuiConta">Ainda não possui conta?</string>
    <string name="textoAbrirTelaCadastro">Cadastre-se agora</string>
    <string name="hintUsuarioCadastro">Usuário</string>
    <string name="hintNomeCadastro">Nome completo</string>
    <string name="hintEmailCadastro">Endereço de e-mail</string>
    <string name="hintSenhaCadastro">Senha</string>
    <string name="type_senha_alterar_atual">Senha atual</string>
    <string name="type_senha_alterar_nova">Nova senha</string>
    <string name="type_senha_alterar_nova_confirmacao">Confirme sua nova senha</string>
    <string name="title_bem_vindo">StockView</string>
    <string name="type_codigo_validacao">Código de validação</string>
    <string name="title_validacao_conta">Validação de conta</string>
    <string name="validar_conta">Validar minha conta</string>
    <string name="voltar"> Voltar</string>
    <string name="text_validacao"> "Quase lá! Enviamos um link e um código de confirmação para a sua caixa de entrada. Por favor, insira o código abaixo ou acesse o link recebido para concluir a ativação da sua conta.</string>
    <string name="text_validar_email"> Já validei através do link</string>
    <string name="text_configuracoes_perfil">Configurações da conta</string>
    <string name="button_alterar_foto_perfil">Alterar foto de perfil</string>
    <string name="button_alterar_senha">Alterar senha</string>
    <string name="button_sair_logoff">Sair da conta</string>
    <string name="text_saindo_conta">Saindo...</string>
    <string name="text_default">Lorem ipsum dolor sit amet</string>
    <string name="add"> mais</string>
    <string name="tituloStock">Stock</string>
    <string name="tituloStockTelaProduto">Nome do Stock Selecionado</string>
    <string name="linear_layout_camera"> Abrir câmera</string>
    <string name="linear_layout_galeria"> Selecionar da galeria</string>
    <string name="linear_layout_url"> Inserir URL de imagem</string>
    <string name="textoEstoqueVazio">Você não possui Stocks cadastrados. Clique no botão + para adicionar.</string>
    <string name="textoProdutoVazio">Este Stock não possui produtos cadastrados. Clique no botão + para adicionar.</string>
    <string name="tituloCriarNovoEstoque">Criar novo estoque</string>
    <string name="tituloEditarInfoEstoque">Editar Stock</string>
    <string name="textoEditarImagemEstoque">Alterar imagem</string>
    <string name="textoRemoverImagemEstoque">Para remover a imagem atual do estoque, não selecione nenhuma imagem e pressione o botão \"Enviar imagem\".</string>
    <string name="botaoEditarInfoEstoqueEnviarImagem">Enviar imagem</string>
    <string name="textoApagarEstoque">Excluir estoque</string>
    <string name="tituloRegistrarProduto">Registrar produto</string>
    <string name="textoSelecionarImagemEstoque">Selecione uma imagem para o Stock. Não é obrigatório definir uma imagem.</string>
    <string name="textoSelecionarImagemProduto">Selecione uma imagem para o produto. Não é obrigatório definir uma imagem.</string>
    <string name="hintNomeEstoque">Nome do Stock</string>
    <string name="hintNomeProduto">Nome</string>
    <string name="hintDataValidadeProduto">Data de validade</string>
    <string name="hintPrecoProduto">Preço (R$)</string>
    <string name="hintQuantidadeProduto">Quantidade</string>
    <string name="hintDescricaoProduto">Descrição</string>
    <string name="hintDescricaoEstoque">Descrição do Stock</string>
    <string name="buttonCriar">Criar</string>
    <string name="buttonCancelar">Cancelar</string>
    <string name="selecionarCamera">Câmera</string>
    <string name="selecionarGaleria">Galeria</string>
    <string name="tituloEditarProduto">Editar produto</string>
    <string name="textoEditarQuantidadeProduto">Adicionar/remover quantidade</string>
    <string name="hintEditarQuantidade">Nova quantidade</string>
    <string name="botaoAlterarQuantidadeProduto">Alterar</string>
    <string name="textoAdicionarRemoverProduto">Insira um valor negativo para remover quantidades</string>
    <string name="textoStatusRequisicao">Status: </string>
    <string name="descricaoStatusRequisicao">Descrição do resultado: </string>
    <string name="botaoFecharRequisicao">Fechar</string>
    <string name="botaoTentarNovamenteRequisicao">Tentar novamente</string>


</resources>