<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaAlterarSenha">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonVoltar"
        style="@style/ButtonArrow"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_arrow_back"
        android:text="@string/voltar"
        android:onClick="voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloAlterarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/button_alterar_senha"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/senhaAtual"
        style="@style/Edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_senha_alterar_atual"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/tituloAlterarSenha"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/togglePasswordAtual"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:alpha="0"
        android:onClick="togglePassword"
        android:textColor="#00FFFFFF"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/senhaAtual"
        app:layout_constraintEnd_toEndOf="@+id/senhaAtual"
        app:layout_constraintTop_toTopOf="@+id/senhaAtual" />

    <EditText
        android:id="@+id/novaSenha"
        style="@style/Edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_senha_alterar_nova"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/senhaAtual"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/novaSenhaRepetida"
        style="@style/Edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_senha_alterar_nova_confirmacao"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/novaSenha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAlterar"
        style="@style/Button"
        android:onClick="alterarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_alterar_senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novaSenhaRepetida" />

</androidx.constraintlayout.widget.ConstraintLayout>