<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background_all_borders_rounded"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tituloEditarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloEditarProduto"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoEditarQuantidadeProduto"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/icon_edit_list_information"
        android:text="@string/textoEditarQuantidadeProduto"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/dialog_background_all_borders_rounded"
        android:backgroundTint="@color/green"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloEditarProduto" />

    <EditText
        android:id="@+id/editTextNovaQuantidade"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:hint="@string/hintEditarQuantidade"
        android:inputType="numberSigned"
        android:textColorHint="@color/gray3"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/textoAdicionarRemoverProduto"
        app:layout_constraintTop_toBottomOf="@+id/textoAdicionarRemoverProduto"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoEnviarNovaQuantidade"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dialog_background_all_borders_rounded"
        android:backgroundTint="@color/goldenLogo2"
        android:text="@string/botaoAlterarQuantidadeProduto"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNovaQuantidade"
        app:layout_constraintEnd_toEndOf="@+id/textoAdicionarRemoverProduto"
        app:layout_constraintTop_toTopOf="@+id/editTextNovaQuantidade"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textoAdicionarRemoverProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/textoAdicionarRemoverProduto"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoEditarQuantidadeProduto"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>