<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormCadastro">

        <View
            android:id="@+id/ContainerLoginCadastro"
            style="@style/ContainerLoginCadastro"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/ContainerBottomLoginCadastro"
            style="@style/ContainerBottomLoginCadastro"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/edit_usuario"
            style="@style/Edit_text"
            android:layout_marginTop="20dp"
            android:hint="@string/hintUsuarioCadastro"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/tituloCadastro"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/edit_nome"
            style="@style/Edit_text"
            android:hint="@string/hintNomeCadastro"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/edit_usuario"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_text"
            android:drawableRight="@drawable/ic_email"
            android:hint="@string/hintEmailCadastro"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/edit_nome"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_text"
            android:drawableRight="@drawable/ic_eye"
            android:hint="@string/hintSenhaCadastro"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp" />

        <Button
            android:id="@+id/toggle_password_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:alpha="0"
            android:onClick="togglePassword"
            android:textColor="#00FFFFFF"
            android:textColorHighlight="#00FFFFFF"
            android:textColorLink="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/edit_senha"
            app:layout_constraintEnd_toEndOf="@+id/edit_senha"
            app:layout_constraintTop_toTopOf="@+id/edit_senha" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_cadastrar"
            style="@style/Button"
            android:onClick="cadastrar"
            android:text="@string/cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/edit_senha"
            app:layout_constraintBottom_toTopOf="@id/ContainerBottomLoginCadastro"
            android:layout_marginTop="50dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_voltar"
            style="@style/ButtonArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:onClick="voltar"
            android:text="@string/voltar"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/ic_logo_stockview"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="@id/ContainerLoginCadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="10dp"
            />

        <ProgressBar
            android:id="@+id/progressBarBotaoCadastrar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:indeterminateTint="@color/green2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/bt_cadastrar"
            app:layout_constraintEnd_toEndOf="@+id/bt_cadastrar"
            app:layout_constraintStart_toStartOf="@+id/bt_cadastrar"
            app:layout_constraintTop_toTopOf="@+id/bt_cadastrar"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tituloCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_cadastro"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ContainerLoginCadastro" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
