<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background_all_borders_rounded"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tituloEditarEstoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloEditarInfoEstoque"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoEditarImagemEstoque"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/icon_image"
        android:text="@string/textoEditarImagemEstoque"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloEditarEstoque" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoApagarEstoque"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/textoApagarEstoque"
        android:textColor="@color/white"
        android:drawableTint="@color/white"
        android:drawableStart="@drawable/icon_trash"
        android:textSize="20sp"
        android:backgroundTint="@color/modern_red"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoEditarImagemEstoque" />

</androidx.constraintlayout.widget.ConstraintLayout>